<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ssplugins.preedit.launcher</groupId>
    <artifactId>Launcher</artifactId>
    <version>1.0.1</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>com.ssplugins.preedit.launcher.Launcher</mainClass>
                        </transformer>
                    </transformers>
                    <finalName>Launcher</finalName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>1.7.24</version>
                <executions>
                    <execution>
                        <id>l4j</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/PreEdit.exe</outfile>
                            <jar>target/Launcher.jar</jar>
                            <icon>icon.ico</icon>
                            <classPath>
                                <mainClass>com.ssplugins.preedit.launcher.Launcher</mainClass>
                                <addDependencies>false</addDependencies>
                            </classPath>
                            <jre>
                                <minVersion>1.8</minVersion>
                            </jre>
                            <splash>
                                <file>icon.bmp</file>
                                <timeout>30</timeout>
                                <waitForWindow>true</waitForWindow>
                            </splash>
                            <versionInfo>
                                <fileVersion>${project.version}.0</fileVersion>
                                <txtFileVersion>${project.version}.0</txtFileVersion>
                                <fileDescription>PreEdit Image Editor</fileDescription>
                                <copyright>SSPlugins</copyright>
                                <productVersion>${project.version}.0</productVersion>
                                <txtProductVersion>${project.version}.0</txtProductVersion>
                                <productName>PreEdit</productName>
                                <internalName>PreEdit</internalName>
                                <originalFilename>PreEdit.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.mashape.unirest</groupId>
            <artifactId>unirest-java</artifactId>
            <version>1.4.9</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.5</version>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>com.ssplugins.preedit</groupId>-->
            <!--<artifactId>PreEdit</artifactId>-->
            <!--<version>1.0.0</version>-->
        <!--</dependency>-->
    </dependencies>

</project>